The hidden menu was still clickable which made it look like the javascript was mangling links, main fix was to add a z-index to push the hidden stuff back : https://github.com/davidtron/uk-72-website/issues/10

--- a/assets/stylesheets/prepare.scss
+++ b/assets/stylesheets/prepare.scss
@@ -386,6 +386,7 @@ a.checklist:before {
 
 .download-languages {
 	position: absolute;
+	z-index: -1;
 	top: 55px;
 	left: 0;
 	border: 1px solid #C2C2C2;
